--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 		      	<section class="flipcard-front">
 		      	<input type="checkbox"/>
 		      		<div class="card">
-		      			<div class="front"><img src="/images/barcelona.jpg"/>
+		      			<div class="front"><img src="images/barcelona.jpg"/>
 		      				<h2>About Me</h2>
 		      			</div>
-		      			<div class="back"><img src="/images/barcelona.jpg"/>
+		      			<div class="back"><img src="images/barcelona.jpg"/>
 		      				<p><strong>Hello!</strong> I'm <em>Boon Kit</em>. Welcome to the site. :)<br/><br/><span class="red">Have a look around!</span>
 		      				</p>
 		      			</div>
@@ -43,10 +43,10 @@
 		      	<section class="flipcard-front">
 		      	<input type="checkbox"/>
 		      		<div class="card">
-		      			<div class="front"><img src="/images/mornington.jpg"/>
+		      			<div class="front"><img src="images/mornington.jpg"/>
 		      				<h2>Goals</h2>
 		      			</div>
-		      			<div class="back"><img src="/images/mornington.jpg"/>
+		      			<div class="back"><img src="images/mornington.jpg"/>
 	      					<h3>To Do For 2018</h3>
 	      					<ol>
 	      						<li>Learn Marketing</li>
@@ -68,10 +68,10 @@
 		      	<section class="flipcard-front">
 		      	<input type="checkbox"/>
 		      		<div class="card">
-		      			<div class="front"><img src="/images/cologne.jpg"/>
+		      			<div class="front"><img src="images/cologne.jpg"/>
 		      				<h2>Experiences</h2>
 		      			</div>
-		      			<div class="back"><img src="/images/cologne.jpg"/>
+		      			<div class="back"><img src="images/cologne.jpg"/>
 		      				<h3>Places I've Visited</h3>
 		      				<ul>
 	      						<li>Barcelona</li>
@@ -90,10 +90,10 @@
 			  	<section class="flipcard-front">
 			  	<input type="checkbox"/>
 			  		<div class="card">
-			  			<div class="front"><img src="/images/volkswagen.jpg"/>
+			  			<div class="front"><img src="images/volkswagen.jpg"/>
 			  				<h2>Contact</h2>
 			  			</div>
-			  			<div class="back"><img src="/images/volkswagen.jpg"/>
+			  			<div class="back"><img src="images/volkswagen.jpg"/>
 			  				<div class="video-container">
 			  					<iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ?ecver=2" style="position:absolute;width:100%;height:100%;padding:0;" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			  				</div>
@@ -108,7 +108,7 @@
 	<!-- Centre Picture FB Profile Link -->
 	<section id="main">
 		<a href="https://www.facebook.com/bk.tan.92102">
-			<img src="/images/profile-picture.jpg"/>
+			<img src="images/profile-picture.jpg"/>
 		</a>
 	</section>
 </div>
