--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 		      	<section class="flipcard-front">
 		      	<input type="checkbox"/>
 		      		<div class="card">
-		      			<div class="front"><img src="images/mornington.jpg"/>
+		      			<div class="front"><img src="images/mornington.JPG"/>
 		      				<h2>Goals</h2>
 		      			</div>
-		      			<div class="back"><img src="images/mornington.jpg"/>
+		      			<div class="back"><img src="images/mornington.JPG"/>
 	      					<h3>To Do For 2018</h3>
 	      					<ol>
 	      						<li>Learn Marketing</li>
